# mlir-toy

./: .env  CMakeLists.txt  README.md
include/: CMakeLists.txt
include/luna/: CMakeLists.txt
include/luna/AST/: BinaryExprAST.h  CallExprAST.h  ExprAST.h  ForExprAST.h  FunctionAST.h  IfExprAST.h  NumberExprAST.h  PrototypeAST.h  UnaryExprAST.h  VarExprAST.h  VariableExprAST.h
include/luna/Lexer/: Tokens.h
lib/: CMakeLists.txt
lib/Conversion/: CMakeLists.txt
lib/Conversion/PolyToStandard/: CMakeLists.txt  PolyToStandard.cpp  PolyToStandard.h  PolyToStandard.td
lib/Dialect/: CMakeLists.txt
lib/Dialect/Poly/: CMakeLists.txt  PolyDialect.cpp  PolyDialect.h  PolyDialect.td  PolyOps.cpp  PolyOps.h  PolyOps.td  PolyPatterns.td  PolyTraits.h  PolyTypes.h  PolyTypes.td
lib/Dialect/Toy/: CMakeLists.txt  ToyDialect.cpp  ToyDialect.h  ToyDialect.td  ToyOps.td
lib/Transform/: CMakeLists.txt
lib/Transform/Affine/: AffineFullUnroll.cpp  AffineFullUnroll.h  CMakeLists.txt
lib/Transform/AffineTD/: AffineFullUnroll.cpp  AffineFullUnroll.h  AffineFullUnrollPatternRewrite.cpp  AffineFullUnrollPatternRewrite.h  CMakeLists.txt  Passes.h  Passes.td
lib/Transform/Arith/: CMakeLists.txt  MulToAdd.cpp  MulToAdd.h
lib/Transform/ArithTD/: CMakeLists.txt  MulToAdd.cpp  MulToAdd.h  Passes.h  Passes.td
notes/: fold.md  walk.md
tests/: CMakeLists.txt  affine_loop_unroll.mlir  code_motion.mlir  cse.mlir  lit.cfg.py  lit.cmake.cfg.py  mul_to_add.mlir  poly_canonicalize.mlir  poly_cononicalize.mlir  poly_syntax.mlir  poly_to_standard.mlir  poly_type.mlir  poly_verifier.mlir  sccp.mlir
tools/: CMakeLists.txt  first-pass.cpp  toy.cpp
